name:                hfmt
version:             0.0.2.3
synopsis:            Haskell source code formatter
description:         Inspired by gofmt. Built using hlint, hindent, and stylish-haskell.
license:             MIT
license-file:        LICENSE
author:              Daniel Stiner
maintainer:          Daniel Stiner <daniel.stiner@gmail.com>
stability:           Experimental
homepage:            http://github.com/danstiner/hfmt
bug-reports:         http://github.com/danstiner/hfmt/issues
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.9.2
tested-with:         GHC >= 7.10

library
  Hs-Source-Dirs:    src
  Exposed-Modules:   Language.Haskell.Format
                     , Language.Haskell.Format.Utilities
                     , Language.Haskell.Source.Enumerator
  Other-Modules:     Language.Haskell.Format.Internal
                     , Language.Haskell.Format.Definitions
                     , Language.Haskell.Format.HIndent
                     , Language.Haskell.Format.HLint
                     , Language.Haskell.Format.Stylish
  GHC-Options:       -Wall
  Build-Depends:     base >= 4.8 && < 5
                     , Cabal
                     , directory
                     , filepath
                     , haskell-src-exts
                     , hindent >= 4.5 , hindent < 5
                     , hlint >= 1.9.13 , hlint < 2
                     , HUnit
                     , pipes
                     , stylish-haskell >= 0.5 , stylish-haskell < 0.6
                     , text

executable hfmt
  Hs-Source-Dirs:    app
  Main-Is:           Main.hs
  Other-Modules:     Actions
                   , OptionsParser
                   , Types
  GHC-Options:       -Wall
  Build-Depends:     base == 4.*
                   , hfmt
                   , ansi-wl-pprint
                   , Diff
                   , optparse-applicative
                   , pipes
                   , pretty

test-suite self-formatting-test
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test/self-formatting
  Main-Is:           Spec.hs
  Build-Depends:     base == 4.*
                     , hfmt
                     , HUnit
                     , test-framework
                     , test-framework-hunit

test-suite pure-test
  Type:              exitcode-stdio-1.0
  Hs-Source-Dirs:    test/pure
  Main-Is:           Spec.hs
  Build-Depends:     base == 4.*
                     , hfmt
                     , HUnit
                     , test-framework
                     , test-framework-hunit

source-repository head
  type: git
  location: git://github.com:danstiner/hfmt.git
